<resources>
    <!--App Name-->
    <string name="app_name">Catalogue</string>

    <!--Login Activity Strings-->
    <string name="login_button_text">Log in</string>
    <string name="password_text_hint">Password</string>
    <string name="user_text_hint">Email</string>
    <string name="audio">Audio</string>
    <string name="tv" translatable="false">TV</string>
    <string name="instrument">Instruments</string>
    <string name="cl_reg_button_text">No account? Register here.</string>

    <!--Administrator Main Activity Strings-->
    <string name="name_employee_hint_textbox">Name</string>
    <string name="lastname_employee_hint_textbox">Last Name</string>
    <string name="phone_employee_hint_textbox">Phone</string>
    <string name="mail_employee_hint_textbox">E-mail</string>
    <string name="password_employee_hint_textbox">Password</string>
    <string name="username_employee_hint_textbox">Username</string>
    <string name="role_employee_hint_textbox">Role</string>
    <string name="add_employee_button">Add Employee</string>
    <string name="nextIntent_button">List of Users</string>

    <!--Info Employee-->
    <string name="employee_id" translatable="false">id</string>
    <string name="employe_name">name</string>
    <string name="employe_lastname">last name</string>
    <string name="employe_user">user</string>
    <string name="employe_rol">rol</string>
    <string name="employe_passsword">password</string>
    <string name="employe_phone">phone</string>
    <string name="employe_mail">mail</string>
    <string name="employe_salary">salary</string>


    <!--Info Product-->
    <string name="id_product" translatable="false">id</string>
    <string name="name_product">name product</string>
    <string name="image_product">image product</string>
    <string name="stock_product">stock</string>
    <string name="price_product">price</string>
    <string name="categories_product">categories</string>
    <string name="product_btn_employee">Buy quantity</string>
    <string name="product_btn_client">Add to cart</string>

    <!--Info Client-->
    <string name="client_btn_catalog">See Catalog</string>
    <string name="client_btn_history">See Purchase History</string>
    <string name="clnt_btn_cart">Go to cart</string>
    <string name="clnt_btn_buy">Buy all</string>
    <string name="title_activity_insert_client_employee">InsertClientEmployee</string>

    <!--Choose Client-->
    <string name="btn_list_clients">See List of Clients</string>
    <string name="btn_insert_client">Insert Client</string>

    <!--Client Options-->
    <string name="id_client" translatable="false">ID</string>
    <string name="name_client">Name</string>
    <string name="lastname_client">Last Name</string>
    <string name="mail_client">Mail</string>
    <string name="address_client">Address</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_select">Select</string>

    <!--Insert Client Employee-->
    <string name="btn_add_client">Add Client</string>

    <!--Insert Product-->
    <string name="product_name">Product Name</string>
    <string name="url_image_product">URL Image</string>
    <string name="stockProduct">Stock</string>
    <string name="priceProduct">Price</string>
    <string name="add_product">Add Product</string>

    <!--Item Product-->
    <string name="product">Product</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>

    <!--Item Product Administrator-->
    <string name="category_product">Category</string>

    <!--Options Administrator-->
    <string name="clients">Clients</string>
    <string name="employees">Employees</string>
    <string name="products">Products</string>
    <string name="report">Report</string>

    <!--Options Products-->
    <string name="list_products">See List of Products</string>
    <string name="insert_product">Insert Product</string>

    <!--Activity Order-->
    <string name="id_order">ID Order</string>
    <string name="employee_name">Employee Name</string>
    <string name="client_name">Client Name</string>
    <string name="date_delivery">Date of Delivery</string>
    <string name="back">Back</string>

    <!--Activity Product-->
    <string name="id_user">ID User</string>
    <string name="btn_return">Return</string>

    <!--Commission graph-->
    <string name="btn_hist_employee">See commission graph</string>
    <string name="graph_commission_title">Commission by day, month and year</string>
    <string-array name="graph_dropdown_options">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <!--Item Employee-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="role">Role</string>
    <string name="payment">Payment</string>

    <!--client history-->
    <string name="c_his_title">Filter by year, month or day</string>
    <string name="c_his_y">Year</string>
    <string name="c_his_m">Month</string>
    <string name="c_his_d">Day</string>
    <string name="btn_c_his_update">Update</string>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="str_pt">Portuguese</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_pt</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
